--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:layout_alignWithParentIfMissing="false"
         android:layout_marginTop="10dp"
         android:onClick="submit"
-        android:background="@drawable/images"
+        android:background="@drawable/button"
         android:layout_below="@+id/radioGroup" />
 
     <EditText
