--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:layout_alignWithParentIfMissing="false"
         android:layout_marginTop="10dp"
         android:onClick="submit"
-        android:layout_below="@+id/radioGroup" />
+        android:layout_below="@+id/spinner" />
 
     <EditText
         android:layout_width="match_parent"
@@ -68,5 +68,22 @@
             android:checked="false"
             android:text="green tea" />
     </RadioGroup>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/button"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_below="@+id/radioGroup"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
