--- a/SimpleUI/app/src/main/res/layout/activity_main.xml
+++ b/SimpleUI/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,8 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/editText"
-        android:id="@+id/radioGroup">
+        android:id="@+id/radioGroup"
+        android:visibility="gone">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -85,5 +86,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="10dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menu"
+        android:id="@+id/menuButton"
+        android:layout_alignTop="@+id/button"
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button"
+        android:onClick="goToMenu"
+        android:layout_marginLeft="10dp" />
 
 </RelativeLayout>
